--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -5,5 +5,5 @@
 // Thats the ugly Bootstrap blue used for all the links, primary buttons etc.
 // Just add your color code here, compile the theme.scss file to change this color everywhere
 
-$font-family-sans-serif:futura, sans-serif;
+$font-family-sans-serif:Kameron, sans-serif;
 $brand-primary:         #7852B2; //#ff6d5a
