--- a/sass/theme/_base.scss
+++ b/sass/theme/_base.scss
@@ -2,5 +2,13 @@ body {
   font-size: 10px;
 }
 p {
-  font-size: 1.5em;
+  font-size: 2em;
+  color: #878a86;
 }
+
+h3 {
+  color: #878a86;
+  font-weight: bold;
+}
+
+//background grey: #e5e5e5
