--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -7,3 +7,6 @@
 
 $font-family-sans-serif:Kameron, sans-serif;
 $brand-primary:         #7852B2; //#ff6d5a
+$color__link: #0000CD;
+$color__link-visited: #1E90FF;
+$color__link-hover: #0000CD;
