--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -229,15 +229,23 @@
   padding: 0;
   margin-bottom: 0;
 }
-
 .social-media-item {
   padding-left: 5px;
   padding-right: 5px;
 }
-
 .social-media-item > a {
   font-size: 5em;
   color: black;
+}
+//contact
+.contact-row {
+  position: relative;
+}
+.contact-pen {
+  max-width: 577px;
+  position: absolute;
+  bottom: 87px;
+  left: 302px;
 }
 
 //bootstrap overrides:
