before changing links

--- a/sass/theme/_base.scss
+++ b/sass/theme/_base.scss
@@ -2,12 +2,12 @@ body {
   font-size: 10px;
 }
 p {
-  font-size: 2em;
-  color: #878a86;
+  font-size: 2.1em;
+  color: #666666;
 }
 
 h3 {
-  color: #878a86;
+  color: #666;
   font-weight: bold;
 }
 a {
