--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -87,18 +87,19 @@
   font-family: inherit;
   font-size: 200%;
 }
+//Board Page
 .board-img {
   margin-bottom: 8em;
 }
 .board-img img {
   max-width: 350px;
 }
-//Board Page
 .board-img .widget-title {
   text-align: center;
   color: black;
   font-size: 2em;
   margin-top: .5em;
+  font-family: 'Nunito';
 }
 //concert Seasons
 .concert-italic, .concert-last-text {
@@ -147,8 +148,8 @@
 }
 //apply
 .form-wrapper {
-  max-width: 80%;
-  margin-left: auto;
+  display: flex;
+  justify-content: center;
   font-size: 1.8em;
 }
 .nf-before-form-content {
