--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -283,7 +283,16 @@
   font-size: .5em;
   margin-top: 1em;
 }
-//bootstrap overrides:
+//bootstrap overrides/menu:
+.menu-item {
+  display: inline-table;
+}
+.navbar {
+  @media (max-width: 1335px) {
+    font-size: 2.54em;
+  }
+}
+//breakpoitn 1320
 .dropdown-menu .menu-item a.nav-link:hover {
   background-color: #eceeef;
 }
