--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: Classical Singers
 Author: Michael Smith
-Author URI: 
-GitHub Theme URI: holger1411/understrap
+Author URI:
+GitHub Theme URI: MichaelLSmith/classicalSingers
 
-Version: 0.6.2
+Version: 0.6.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: understrap
