changed version number

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: Classical Singers
+Theme Name: Classical Singers 0.6.4
 Author: Michael Smith
 Author URI:
 GitHub Theme URI: MichaelLSmith/classicalSingers
 
-Version: 0.6.3
+Version: 0.6.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: understrap
