--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -140,6 +140,8 @@
   font-family: 'Open Sans Condensed', sans-serif;
   h5 {
     font-size: 1.6rem;
+    line-height: .75;
+    margin-bottom: .5em;
   }
   h6 {
     font-size: 1.3rem;
